--- a/src/scss/utils/_utils.scss
+++ b/src/scss/utils/_utils.scss
@@ -6,7 +6,7 @@ body {
   line-height: 20px;
 
   // TMP
-  background-color: rgb(175, 173, 173);
+  // background-color: rgb(175, 173, 173);
 }
 
 .container {
