--- a/src/scss/utils/_variables.scss
+++ b/src/scss/utils/_variables.scss
@@ -1,5 +1,3 @@
-:root {
-    --main-text-color: #000000;
-    --additional-text-color: #ffffff;
-    --brand-color: rgba(34, 66, 115, 0.77);
-  }
+$mainTextColor: #000000;
+$additionalTextColor: #ffffff;
+$brandTextColor: rgba(34, 66, 115, 0.77);
