--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -13,7 +13,7 @@
 }
 
 .footerBackground {
-    background-color: var(--brand-color);
+    background-color: $brandTextColor;
 }
 
 .footerContent {
@@ -34,7 +34,7 @@
     font-size: 10px;
     line-height: 12px;
     text-align: center;
-    color: var(--additional-text-color);
+    color: $additionalTextColor;
 }
 
 .footerItem {
@@ -70,7 +70,7 @@
     font-weight: 400;
     font-size: 7px;
     line-height: 7px;
-    color: var(--additional-text-color);
+    color: $additionalTextColor;
 }
 
 .footerContactsText {
@@ -78,5 +78,5 @@
     font-weight: 300;
     font-size: 5px;
     line-height: 6px;
-    color: var(--main-text-color);
+    color: $mainTextColor;
 }
