--- a/src/scss/sections/_foreign.scss
+++ b/src/scss/sections/_foreign.scss
@@ -17,7 +17,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: var(--brand-color);
+  background-color: $brandTextColor;
 }
 
 .foreignContentTextWrap {
@@ -29,7 +29,7 @@
   font-weight: 400;
   font-size: 5px;
   line-height: 7px;
-  color: var(--additional-text-color);
+  color: $additionalTextColor;
 }
 
 .foreignContentText:not(:last-child) {
