--- a/src/scss/sections/_recovery.scss
+++ b/src/scss/sections/_recovery.scss
@@ -9,7 +9,7 @@
   bottom: 0;
   height: 1px;
   width: 53%;
-  background-color: var(--brand-color);
+  background-color: $brandTextColor;
 }
 
 .recoveryWrap {
@@ -26,7 +26,7 @@
   font-size: 8px;
   line-height: 10px;
   text-align: center;
-  color: var(--main-text-color);
+  color: $mainTextColor;
 }
 
 .recoveryContent {
@@ -39,7 +39,7 @@
   font-size: 5px;
   line-height: 7px;
   text-align: center;
-  color: var(--main-text-color);
+  color: $mainTextColor;
 }
 
 .recoveryTextWrap {
