--- a/src/scss/sections/_crm.scss
+++ b/src/scss/sections/_crm.scss
@@ -20,6 +20,8 @@
   font-weight: 500;
   font-size: 7px;
   line-height: 9px;
+  font-size: calcFluidFontSize(7, 25, 320, 1600);
+  line-height: calcFluidLineHeight(9, 32, 320, 1600);
   text-align: center;
   color: $additionalTextColor;
   background-color: $brandTextColor;
@@ -60,8 +62,8 @@
 .b24-form-control-required {
   font-family: "Kodchasan", sans-serif !important;
   font-weight: 400 !important;
-  font-size: 5px !important;
-  line-height: 7px !important;
+  font-size: calcFluidFontSize(5, 21, 320, 1600) !important;
+  line-height: calcFluidLineHeight(7, 27, 320, 1600) !important;
 }
 
 .b24-form-header-padding {
@@ -115,6 +117,8 @@ input[type="checkbox"] {
   font-weight: 400 !important;
   font-size: 10px !important;
   line-height: 12px !important;
+  font-size: calcFluidFontSize(10, 25, 320, 1600) !important;
+  line-height: calcFluidLineHeight(12, 32, 320, 1600) !important;
 }
 
 .b24-form-sign {
