--- a/src/css/main.css
+++ b/src/css/main.css
@@ -193,8 +193,11 @@ body {
   position: absolute;
   top: 5px;
   left: 0;
-  width: 73px;
-  height: 39px;
+  width: 25%;
+}
+
+.headerContent {
+  width: 75%;
 }
 
 .headerContactsWrap {
@@ -206,35 +209,31 @@ body {
   margin-right: 5px;
   font-family: "Kodchasan", sans-serif;
   font-weight: 400;
-  font-size: 4px;
-  line-height: 5px;
+  font-size: calc( 0.00859375 * 100vw + 1.25px );
+  line-height: calc( 0.01171875 * 100vw + 1.25px );
   color: #000000;
-}
-
-.navMenu {
-  width: 100%;
 }
 
 .navMenuList {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: stretch;
-      -ms-flex-align: stretch;
-          align-items: stretch;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   width: 100%;
-}
-
-.navMenuItem {
   background-color: rgba(34, 66, 115, 0.77);
 }
 
 .navMenuText {
-  padding: 10px;
+  padding: 10px 5px;
   font-family: "Kodchasan", sans-serif;
   font-weight: 400;
-  font-size: 3px;
-  line-height: 4px;
+  font-size: calc( 0.00859375 * 100vw + 1.25px );
+  line-height: calc( 0.01171875 * 100vw + 1.25px );
   text-align: center;
   color: #ffffff;
 }
@@ -266,6 +265,8 @@ body {
   font-weight: 600;
   font-size: 8px;
   line-height: 10px;
+  font-size: calc( 0.01328125 * 100vw + 3.75px );
+  line-height: calc( 0.0171875 * 100vw + 4.5px );
   text-align: center;
   color: #000000;
 }
@@ -279,8 +280,8 @@ body {
 .recoveryText {
   font-family: "Kodchasan", sans-serif;
   font-weight: 400;
-  font-size: 5px;
-  line-height: 7px;
+  font-size: calc( 0.0125 * 100vw + 1px );
+  line-height: calc( 0.015625 * 100vw + 2px );
   text-align: center;
   color: #000000;
 }
@@ -344,6 +345,8 @@ body {
   font-weight: 500;
   font-size: 7px;
   line-height: 9px;
+  font-size: calc( 0.0140625 * 100vw + 2.5px );
+  line-height: calc( 0.01796875 * 100vw + 3.25px );
   text-align: center;
   color: #ffffff;
   background-color: rgba(34, 66, 115, 0.77);
@@ -384,8 +387,8 @@ body {
 .b24-form-control-required {
   font-family: "Kodchasan", sans-serif !important;
   font-weight: 400 !important;
-  font-size: 5px !important;
-  line-height: 7px !important;
+  font-size: calc( 0.0125 * 100vw + 1px ) !important;
+  line-height: calc( 0.015625 * 100vw + 2px ) !important;
 }
 
 .b24-form-header-padding {
@@ -435,6 +438,8 @@ input[type=checkbox] {
   font-weight: 400 !important;
   font-size: 10px !important;
   line-height: 12px !important;
+  font-size: calc( 0.01171875 * 100vw + 6.25px ) !important;
+  line-height: calc( 0.015625 * 100vw + 7px ) !important;
 }
 
 .b24-form-sign {
@@ -460,8 +465,8 @@ input[type=checkbox] {
   margin-bottom: 10px;
   font-family: "Kodchasan", sans-serif;
   font-weight: 600;
-  font-size: 8px;
-  line-height: 10px;
+  font-size: calc( 0.01328125 * 100vw + 3.75px );
+  line-height: calc( 0.0171875 * 100vw + 4.5px );
   text-align: center;
 }
 
@@ -470,8 +475,8 @@ input[type=checkbox] {
   padding: 10px 5px;
   font-family: "Kodchasan", sans-serif;
   font-weight: 600;
-  font-size: 7px;
-  line-height: 9px;
+  font-size: calc( 0.0109375 * 100vw + 3.5px );
+  line-height: calc( 0.0140625 * 100vw + 4.5px );
   text-align: center;
   color: #ffffff;
   background-color: rgba(34, 66, 115, 0.77);
@@ -484,8 +489,8 @@ input[type=checkbox] {
   padding: 0 5px;
   font-family: "Kodchasan", sans-serif;
   font-weight: 500;
-  font-size: 7px;
-  line-height: 9px;
+  font-size: calc( 0.0109375 * 100vw + 3.5px );
+  line-height: calc( 0.0140625 * 100vw + 4.5px );
   text-align: center;
   color: #000000;
 }
@@ -494,8 +499,8 @@ input[type=checkbox] {
   padding: 0 40px;
   font-family: "Kodchasan", sans-serif;
   font-weight: 600;
-  font-size: 5px;
-  line-height: 7px;
+  font-size: calc( 0.0078125 * 100vw + 2.5px );
+  line-height: calc( 0.01015625 * 100vw + 3.75px );
   text-align: center;
   color: #000000;
 }
@@ -529,8 +534,8 @@ input[type=checkbox] {
 .cardsDescription {
   font-family: "Kodchasan", sans-serif;
   font-weight: 400;
-  font-size: 5px;
-  line-height: 7px;
+  font-size: calc( 0.0078125 * 100vw + 2.5px );
+  line-height: calc( 0.01015625 * 100vw + 3.75px );
   text-align: center;
   color: #000000;
 }
@@ -584,8 +589,8 @@ input[type=checkbox] {
   padding: 0 55px;
   font-family: "Kodchasan", sans-serif;
   font-weight: 600;
-  font-size: 7px;
-  line-height: 9px;
+  font-size: calc( 0.0140625 * 100vw + 2.5px );
+  line-height: calc( 0.01796875 * 100vw + 3.25px );
   text-align: center;
 }
 
@@ -610,8 +615,8 @@ input[type=checkbox] {
 .foreignContentText {
   font-family: "Kodchasan", sans-serif;
   font-weight: 400;
-  font-size: 5px;
-  line-height: 7px;
+  font-size: calc( 0.015625 * 100vw + 0px );
+  line-height: calc( 0.01953125 * 100vw + 0.75px );
   color: #ffffff;
 }
 
@@ -642,8 +647,8 @@ input[type=checkbox] {
   margin-bottom: 10px;
   font-family: "Kodchasan", sans-serif;
   font-weight: 600;
-  font-size: 7px;
-  line-height: 9px;
+  font-size: calc( 0.0140625 * 100vw + 2.5px );
+  line-height: calc( 0.01796875 * 100vw + 3.25px );
   text-align: center;
 }
 
@@ -678,6 +683,8 @@ input[type=checkbox] {
   font-weight: 400;
   font-size: 10px;
   line-height: 13px;
+  font-size: calc( 0.0140625 * 100vw + 5.5px );
+  line-height: calc( 0.01796875 * 100vw + 7.25px );
   text-align: center;
   color: #ffffff;
   background-color: rgba(34, 66, 115, 0.77);
@@ -687,8 +694,8 @@ input[type=checkbox] {
 .identificationText {
   font-family: "Kodchasan", sans-serif;
   font-weight: 400;
-  font-size: 5px;
-  line-height: 7px;
+  font-size: calc( 0.015625 * 100vw + 0px );
+  line-height: calc( 0.01953125 * 100vw + 0.75px );
   text-align: justify;
   text-indent: 10px;
 }
@@ -699,6 +706,8 @@ input[type=checkbox] {
   font-weight: 700;
   font-size: 10px;
   line-height: 12px;
+  font-size: calc( 0.0171875 * 100vw + 4.5px );
+  line-height: calc( 0.02109375 * 100vw + 5.25px );
   text-align: center;
 }
 
@@ -709,6 +718,8 @@ input[type=checkbox] {
   font-weight: 400;
   font-size: 7px;
   line-height: 8px;
+  font-size: calc( 0.01953125 * 100vw + 0.75px );
+  line-height: calc( 0.0234375 * 100vw + 0.5px );
   text-align: center;
 }
 
@@ -716,11 +727,6 @@ input[type=checkbox] {
   margin: 0 auto;
   padding: 0 40px;
   max-width: 400px;
-}
-@media screen and (min-width: 768px) {
-  .sliderWrap {
-    display: none;
-  }
 }
 
 .sliderTeamItem {
@@ -737,8 +743,8 @@ input[type=checkbox] {
   margin-bottom: 10px;
   font-family: "Abrac";
   font-weight: 400;
-  font-size: 10px;
-  line-height: 12px;
+  font-size: calc( 0.0078125 * 100vw + 7.5px );
+  line-height: calc( 0.009375 * 100vw + 9px );
   text-align: center;
   color: #ffffff;
 }
@@ -746,8 +752,8 @@ input[type=checkbox] {
 .sliderTeamItemText {
   font-family: "HalveticaNeue";
   font-weight: 300;
-  font-size: 10px;
-  line-height: 12px;
+  font-size: calc( 0.0078125 * 100vw + 7.5px );
+  line-height: calc( 0.009375 * 100vw + 9px );
   text-align: center;
   color: #ffffff;
 }
@@ -760,8 +766,8 @@ input[type=checkbox] {
 .footerTitle {
   font-family: "HelveticaNeue", sans-serif;
   font-weight: 700;
-  font-size: 10px;
-  line-height: 12px;
+  font-size: calc( 0.01171875 * 100vw + 6.25px );
+  line-height: calc( 0.01484375 * 100vw + 7.25px );
   text-align: center;
 }
 
@@ -783,15 +789,14 @@ input[type=checkbox] {
 }
 
 .footerLogo {
-  width: 73px;
-  height: 39px;
+  width: 25%;
 }
 
 .footerSlogan {
   font-family: "HelveticaNeue", sans-serif;
   font-weight: 500;
-  font-size: 10px;
-  line-height: 12px;
+  font-size: calc( 0.0171875 * 100vw + 4.5px );
+  line-height: calc( 0.02109375 * 100vw + 5.25px );
   text-align: center;
   color: #ffffff;
 }
@@ -833,8 +838,8 @@ input[type=checkbox] {
 .footerContactsTitle {
   font-family: "Hubballi", sans-serif;
   font-weight: 400;
-  font-size: 7px;
-  line-height: 7px;
+  font-size: calc( 0.01015625 * 100vw + 3.75px );
+  line-height: calc( 0.009375 * 100vw + 4px );
   color: #ffffff;
 }
 
@@ -843,5 +848,7 @@ input[type=checkbox] {
   font-weight: 300;
   font-size: 5px;
   line-height: 6px;
+  font-size: calc( 0.01015625 * 100vw + 1.75px );
+  line-height: calc( 0.0125 * 100vw + 2px );
   color: #000000;
 }/*# sourceMappingURL=main.css.map */
