--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -9,8 +9,12 @@
   position: absolute;
   top: 5px;
   left: 0;
-  width: 73px;
-  height: 39px;
+  width: 25%;
+  
+}
+
+.headerContent {
+  width: 75%;
 }
 
 .headerContactsWrap {
@@ -22,32 +26,28 @@
   margin-right: 5px;
   font-family: "Kodchasan", sans-serif;
   font-weight: 400;
-  font-size: 4px;
-  line-height: 5px;
+  font-size: calcFluidFontSize(4, 15, 320, 1600);
+  line-height: calcFluidLineHeight(5, 20, 320, 1600);
   color: $mainTextColor;
   
 }
 
-.navMenu {
-  width: 100%;
-}
 
 .navMenuList {
   display: flex;
-  align-items: stretch;
+  justify-content: space-between;
+  align-items: center;
   width: 100%;
-}
-
-.navMenuItem {
   background-color: $brandTextColor;
 }
 
+
 .navMenuText {
-  padding: 10px;
+  padding: 10px 5px;
   font-family: "Kodchasan", sans-serif;
   font-weight: 400;
-  font-size: 3px;
-  line-height: 4px;
+  font-size: calcFluidFontSize(4, 15, 320, 1600);
+  line-height: calcFluidLineHeight(5, 20, 320, 1600);
   text-align: center;
   color: $additionalTextColor;
 }
