--- a/src/scss/sections/_cards.scss
+++ b/src/scss/sections/_cards.scss
@@ -17,8 +17,8 @@
   margin-bottom: 10px;
   font-family: "Kodchasan", sans-serif;
   font-weight: 600;
-  font-size: 8px;
-  line-height: 10px;
+  font-size: calcFluidFontSize(8, 25, 320, 1600);
+  line-height: calcFluidLineHeight(10, 32, 320, 1600);
   text-align: center;
 }
 
@@ -27,8 +27,8 @@
   padding: 10px 5px;
   font-family: "Kodchasan", sans-serif;
   font-weight: 600;
-  font-size: 7px;
-  line-height: 9px;
+  font-size: calcFluidFontSize(7, 21, 320, 1600);
+  line-height: calcFluidLineHeight(9, 27, 320, 1600);
   text-align: center;
   color: $additionalTextColor;
   background-color: $brandTextColor;
@@ -40,8 +40,8 @@
   padding: 0 5px;
   font-family: "Kodchasan", sans-serif;
   font-weight: 500;
-  font-size: 7px;
-  line-height: 9px;
+  font-size: calcFluidFontSize(7, 21, 320, 1600);
+  line-height: calcFluidLineHeight(9, 27, 320, 1600);
   text-align: center;
   color: $mainTextColor;
 }
@@ -50,18 +50,14 @@
   padding: 0 40px;
   font-family: "Kodchasan", sans-serif;
   font-weight: 600;
-  font-size: 5px;
-  line-height: 7px;
+  font-size: calcFluidFontSize(5, 15, 320, 1600);
+  line-height: calcFluidLineHeight(7, 20, 320, 1600);
   text-align: center;
   color: $mainTextColor;
 }
 
 .cardsList {
   margin-bottom: 15px;
-  // display: flex;
-  // justify-content: space-between;
-  // flex-wrap: wrap;
-  // align-content: stretch;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   grid-auto-rows: 1fr;
@@ -83,8 +79,8 @@
 .cardsDescription {
   font-family: "Kodchasan", sans-serif;
   font-weight: 400;
-  font-size: 5px;
-  line-height: 7px;
+  font-size: calcFluidFontSize(5, 15, 320, 1600);
+  line-height: calcFluidLineHeight(7, 20, 320, 1600);
   text-align: center;
   color: $mainTextColor;
 }
