--- a/src/scss/sections/_identification.scss
+++ b/src/scss/sections/_identification.scss
@@ -1,51 +1,53 @@
 .identificationSection {
-    padding: 10px 0;
+  padding: 10px 0;
 }
 
 .identificationTitle {
-    margin-bottom: 10px;
-    font-family: 'Kodchasan', sans-serif;
-    font-weight: 600;
-    font-size: 7px;
-    line-height: 9px;
-    text-align: center;
+  margin-bottom: 10px;
+  font-family: "Kodchasan", sans-serif;
+  font-weight: 600;
+  font-size: calcFluidFontSize(7, 25, 320, 1600);
+  line-height: calcFluidLineHeight(9, 32, 320, 1600);
+  text-align: center;
 }
 
 .identificationContent {
-    padding: 0 10px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  padding: 0 10px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .identificationImageWrap {
-    display: block;
-    margin-right: 10px;
-    flex-shrink: 0;
-    width: 43%;
+  display: block;
+  margin-right: 10px;
+  flex-shrink: 0;
+  width: 43%;
 }
 
-.identificationImage{
-    margin-bottom: 25px;
+.identificationImage {
+  margin-bottom: 25px;
 }
 
 .identificationButtonText {
-    padding: 5px;
-    font-family: 'Kodchasan', sans-serif;
-    font-weight: 400;
-    font-size: 10px;
-    line-height: 13px;
-    text-align: center;
-    color: $additionalTextColor;
-    background-color: $brandTextColor;
-    border-radius: 20px;
+  padding: 5px;
+  font-family: "Kodchasan", sans-serif;
+  font-weight: 400;
+  font-size: 10px;
+  line-height: 13px;
+  font-size: calcFluidFontSize(10, 28, 320, 1600);
+  line-height: calcFluidLineHeight(13, 36, 320, 1600);
+  text-align: center;
+  color: $additionalTextColor;
+  background-color: $brandTextColor;
+  border-radius: 20px;
 }
 
 .identificationText {
-    font-family: 'Kodchasan', sans-serif;
-    font-weight: 400;
-    font-size: 5px;
-    line-height: 7px;
-    text-align: justify;
-    text-indent: 10px;
+  font-family: "Kodchasan", sans-serif;
+  font-weight: 400;
+  font-size: calcFluidFontSize(5, 25, 320, 1600);
+  line-height: calcFluidLineHeight(7, 32, 320, 1600);
+  text-align: justify;
+  text-indent: 10px;
 }
