--- a/src/scss/sections/_ourTeam.scss
+++ b/src/scss/sections/_ourTeam.scss
@@ -1,58 +1,60 @@
-.ourTeamTitle{
-    margin-bottom: 10px;
-    font-family: 'HelveticaNeue', sans-serif;
-    font-weight: 700;
-    font-size: 10px;
-    line-height: 12px;
-    text-align: center;
+.ourTeamTitle {
+  margin-bottom: 10px;
+  font-family: "HelveticaNeue", sans-serif;
+  font-weight: 700;
+  font-size: 10px;
+  line-height: 12px;
+  font-size: calcFluidFontSize(10, 32, 320, 1600);
+  line-height: calcFluidLineHeight(12, 39, 320, 1600);
+  text-align: center;
 }
 .ourTeamText {
-    margin-bottom: 10px;
-    padding: 0 10px;
-    font-family: 'HelveticaNeue', sans-serif;
-    font-weight: 400;
-    font-size: 7px;
-    line-height: 8px;
-    text-align: center;
+  margin-bottom: 10px;
+  padding: 0 10px;
+  font-family: "HelveticaNeue", sans-serif;
+  font-weight: 400;
+  font-size: 7px;
+  line-height: 8px;
+  font-size: calcFluidFontSize(7, 32, 320, 1600);
+  line-height: calcFluidLineHeight(8, 38, 320, 1600);
+  text-align: center;
 }
 
-
 .sliderWrap {
-    margin: 0 auto;
-  
-    padding: 0 40px;
-    max-width: 400px;
-    @media screen and (min-width: 768px) {
-      display: none;
-    }
-  }
-  
-  .sliderTeamItem {
-    width: 210px;
-    padding: 8px;
-    background-color: $brandTextColor;
-  }
-  
-  .sliderTeamItemImage {
-    margin-bottom: 10px;
-  }
-  
-  .sliderTeamItemTitle {
-    margin-bottom: 10px;
-    font-family: "Abrac";
-    font-weight: 400;
-    font-size: 10px;
-    line-height: 12px;
-    text-align: center;
-    color: $additionalTextColor;
-  }
-  
-  .sliderTeamItemText {
-    font-family: "HalveticaNeue";
-    font-weight: 300;
-    font-size: 10px;
-    line-height: 12px;
-    text-align: center;
-    color: $additionalTextColor;
-  }
-  
+  margin: 0 auto;
+
+  padding: 0 40px;
+  max-width: 400px;
+  // @media screen and (min-width: 768px) {
+  //   display: none;
+  // }
+}
+
+.sliderTeamItem {
+  width: 210px;
+  padding: 8px;
+  background-color: $brandTextColor;
+}
+
+.sliderTeamItemImage {
+  margin-bottom: 10px;
+}
+
+.sliderTeamItemTitle {
+  margin-bottom: 10px;
+  font-family: "Abrac";
+  font-weight: 400;
+  font-size: calcFluidFontSize(10, 20, 320, 1600);
+  line-height: calcFluidLineHeight(12, 24, 320, 1600);
+  text-align: center;
+  color: $additionalTextColor;
+}
+
+.sliderTeamItemText {
+  font-family: "HalveticaNeue";
+  font-weight: 300;
+  font-size: calcFluidFontSize(10, 20, 320, 1600);
+  line-height: calcFluidLineHeight(12, 24, 320, 1600);
+  text-align: center;
+  color: $additionalTextColor;
+}
