--- a/src/scss/sections/_recovery.scss
+++ b/src/scss/sections/_recovery.scss
@@ -25,6 +25,8 @@
   font-weight: 600;
   font-size: 8px;
   line-height: 10px;
+  font-size: calcFluidFontSize(8, 25, 320, 1600);
+  line-height: calcFluidLineHeight(10, 32, 320, 1600);
   text-align: center;
   color: $mainTextColor;
 }
@@ -36,8 +38,8 @@
 .recoveryText {
   font-family: "Kodchasan", sans-serif;
   font-weight: 400;
-  font-size: 5px;
-  line-height: 7px;
+  font-size: calcFluidFontSize(5, 21, 320, 1600);
+  line-height: calcFluidLineHeight(7, 27, 320, 1600);
   text-align: center;
   color: $mainTextColor;
 }
