change structure of scss (+add func)

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,5 +1,6 @@
 @import "./utils/reset"; // RESET
 @import "./utils/fonts"; // FONTS
+@import './utils/functions'; // FONT SIZE + LINE HEIGHT
 @import './utils/variables'; //COLORS
 @import './utils/utils'; // CONTAINER
 
