--- a/src/css/main.css
+++ b/src/css/main.css
@@ -155,6 +155,7 @@ body {
   padding: 0 15px;
   min-width: 320px;
   width: 100%;
+  max-width: 480px;
 }
 @media screen and (min-width: 768px) {
   .container {
