--- a/src/scss/utils/_utils.scss
+++ b/src/scss/utils/_utils.scss
@@ -16,6 +16,7 @@ body {
   padding: 0 15px;
   min-width: 320px;
   width: 100%;
+  max-width: 480px;
   //min-content 290px;
 
   @media screen and (min-width: 768px) {
