--- a/src/scss/sections/_cards.scss
+++ b/src/scss/sections/_cards.scss
@@ -1,6 +1,18 @@
 .cardsSection {
   position: relative;
   padding: 10px 0;
+  @media screen and (min-width: 768px) {
+    padding: 15px 0;
+  }
+  @media screen and (min-width: 1024px) {
+    padding: 20px 0;
+  }
+  @media screen and (min-width: 1280px) {
+    padding: 30px 0;
+  }
+  @media screen and (min-width: 1600px) {
+    padding: 40px 0;
+  }
 }
 
 .cardsSection::after {
@@ -20,6 +32,18 @@
   font-size: calcFluidFontSize(8, 25, 320, 1600);
   line-height: calcFluidLineHeight(10, 32, 320, 1600);
   text-align: center;
+  @media screen and (min-width: 768px) {
+    margin-bottom: 15px;
+  }
+  @media screen and (min-width: 1024px) {
+    margin-bottom: 20px;
+  }
+  @media screen and (min-width: 1280px) {
+    margin-bottom: 30px;
+  }
+  @media screen and (min-width: 1600px) {
+    margin-bottom: 40px;
+  }
 }
 
 .cardsTextTop {
@@ -33,6 +57,18 @@
   color: $additionalTextColor;
   background-color: $brandTextColor;
   box-shadow: 7px 9px 4px 5px rgba(34, 64, 140, 0.15);
+  @media screen and (min-width: 768px) {
+    margin-bottom: 25px;
+  }
+  @media screen and (min-width: 1024px) {
+    margin-bottom: 40px;
+  }
+  @media screen and (min-width: 1280px) {
+    margin-bottom: 50px;
+  }
+  @media screen and (min-width: 1600px) {
+    margin-bottom: 70px;
+  }
 }
 
 .cardsTextMidle {
@@ -44,6 +80,13 @@
   line-height: calcFluidLineHeight(9, 27, 320, 1600);
   text-align: center;
   color: $mainTextColor;
+
+  @media screen and (min-width: 1024px) {
+    margin-bottom: 25px;
+  }
+  @media screen and (min-width: 1600px) {
+    margin-bottom: 30px;
+  }
 }
 
 .cardsTextBottom {
@@ -66,7 +109,6 @@
 
 .cardsItem {
   padding: 5px 10px;
-  
 
   display: flex;
   flex-direction: column;
@@ -87,40 +129,128 @@
 
 .cardsImage1 {
   width: 24px;
-  height: 25px;
+  @media screen and (min-width: 768px) {
+    width: 44px;    
+  }
+  @media screen and (min-width: 1024px) {
+    width: 64px;   
+  }
+  @media screen and (min-width: 1280px) {
+    width: 83px;    
+  }
+  @media screen and (min-width: 1600px) {
+    width: 102px;   
+  }
 }
 
 .cardsImage2 {
   width: 24px;
-  height: 28px;
+  @media screen and (min-width: 768px) {
+    width: 42px;    
+  }
+  @media screen and (min-width: 1024px) {
+    width: 60px;   
+  }
+  @media screen and (min-width: 1280px) {
+    width: 78px;    
+  }
+  @media screen and (min-width: 1600px) {
+    width: 96px;   
+  }
 }
 
 .cardsImage3 {
   width: 28px;
-  height: 30px;
+  @media screen and (min-width: 768px) {
+    width: 56px;    
+  }
+  @media screen and (min-width: 1024px) {
+    width: 84px;   
+  }
+  @media screen and (min-width: 1280px) {
+    width: 112px;    
+  }
+  @media screen and (min-width: 1600px) {
+    width: 139px;   
+  }
 }
 
 .cardsImage4 {
   width: 32px;
-  height: 33px;
+  @media screen and (min-width: 768px) {
+    width: 68px;    
+  }
+  @media screen and (min-width: 1024px) {
+    width: 104px;   
+  }
+  @media screen and (min-width: 1280px) {
+    width: 139px;    
+  }
+  @media screen and (min-width: 1600px) {
+    width: 174px;   
+  }
 }
 
 .cardsImage5 {
   width: 36px;
-  height: 34px;
+  @media screen and (min-width: 768px) {
+    width: 64px;    
+  }
+  @media screen and (min-width: 1024px) {
+    width: 92px;   
+  }
+  @media screen and (min-width: 1280px) {
+    width: 120px;    
+  }
+  @media screen and (min-width: 1600px) {
+    width: 149px;   
+  }
 }
 
 .cardsImage6 {
   width: 30px;
-  height: 34px;
+  @media screen and (min-width: 768px) {
+    width: 46px;    
+  }
+  @media screen and (min-width: 1024px) {
+    width: 62px;   
+  }
+  @media screen and (min-width: 1280px) {
+    width: 78px;    
+  }
+  @media screen and (min-width: 1600px) {
+    width: 111px;   
+  }
 }
 
 .cardsImage7 {
-  width: 37px;
-  height: 36px;
+  width: 37px;  
+  @media screen and (min-width: 768px) {
+    width: 69px;    
+  }
+  @media screen and (min-width: 1024px) {
+    width: 101px;   
+  }
+  @media screen and (min-width: 1280px) {
+    width: 132px;    
+  }
+  @media screen and (min-width: 1600px) {
+    width: 166px;   
+  }
 }
 
 .cardsImage8 {
-  width: 31px;
-  height: 30px;
+  width: 31px;  
+  @media screen and (min-width: 768px) {
+    width: 61px;    
+  }
+  @media screen and (min-width: 1024px) {
+    width: 91px;    
+  }
+  @media screen and (min-width: 1280px) {
+    width: 121px;   
+  }
+  @media screen and (min-width: 1600px) {
+    width: 150px;    
+  }
 }
