--- a/src/scss/sections/_crm.scss
+++ b/src/scss/sections/_crm.scss
@@ -1,6 +1,18 @@
 .crmSection {
   position: relative;
   padding: 10px 0;
+  @media screen and (min-width: 768px){
+    padding-bottom: 15px;
+  }
+  @media screen and (min-width: 1024px){
+    padding-bottom: 20px;
+  }
+  @media screen and (min-width: 1280px){
+    padding-bottom: 25px;
+  }
+  @media screen and (min-width: 1600px){
+    padding-bottom: 30px;
+  }
 }
 
 .crmSection::after {
@@ -25,10 +37,18 @@
   text-align: center;
   color: $additionalTextColor;
   background-color: $brandTextColor;
+
+  @media screen and (min-width: 768px) {
+    margin-left: auto;
+    margin-right: 10px;
+    padding: 0 5px;
+    width: calc(50% - 20px);
+  }
 }
 
 .crmContent {
   display: flex;
+  justify-content: space-between;
   align-items: center;
 }
 
@@ -41,6 +61,7 @@
 
 .crmScriptWrap {
   width: 100%;
+  max-width: 600px;
 }
 
 // FONTS
@@ -50,6 +71,9 @@
   max-width: unset !important;
   width: 100% !important;
   padding: 5px !important;
+  @media screen and (min-width: 768px) {
+    padding: 15px !important;
+  }
 }
 
 .b24-form,
@@ -75,16 +99,40 @@
 }
 
 .b24-form-field {
-  margin: 0 !important;
+  margin-bottom: 5px !important;
+  @media screen and (min-width: 768px) {
+    margin-bottom: 10px !important;
+  }
+  @media screen and (min-width: 1280px) {
+    margin-bottom: 15px !important;
+  }
+  @media screen and (min-width: 1600px) {
+    margin-bottom: 20px !important;
+  }
 }
 
 .b24-form-control-container {
   margin: 0 0 5px 0 !important;
+  @media screen and (min-width: 768px) {
+    margin: 0 0 10px 0 !important;
+  }
 }
 
 .b24-form-control {
   padding: 5px !important;
   height: auto !important;
+  @media screen and (min-width: 768px) {
+    padding: 10px !important;
+  }
+  @media screen and (min-width: 1024px) {
+    padding: 12px !important;
+  }
+  @media screen and (min-width: 1280px) {
+    padding: 15px !important;
+  }
+  @media screen and (min-width: 1600px) {
+    padding: 20px !important;
+  }
 }
 
 .b24-form-control-label {
@@ -105,6 +153,26 @@
 input[type="checkbox"] {
   width: 5px !important;
   height: 5px !important;
+  @media screen and (min-width: 480px) {
+    width: 8px !important;
+    height: 8px !important;
+  }
+  @media screen and (min-width: 768px) {
+    width: 10px !important;
+    height: 10px !important;
+  }
+  @media screen and (min-width: 1024px) {
+    width: 12px !important;
+    height: 12px !important;
+  }
+  @media screen and (min-width: 1280px) {
+    width: 14px !important;
+    height: 14px !important;
+  }
+  @media screen and (min-width: 1600px) {
+    width: 18px !important;
+    height: 18px !important;
+  }
 }
 
 // BUTTON
@@ -119,6 +187,18 @@ input[type="checkbox"] {
   line-height: 12px !important;
   font-size: calcFluidFontSize(10, 25, 320, 1600) !important;
   line-height: calcFluidLineHeight(12, 32, 320, 1600) !important;
+  @media screen and (min-width: 768px){
+    padding: 10px !important;
+  }
+  @media screen and (min-width: 1024px){
+    padding: 12px !important;
+  }
+  @media screen and (min-width: 1280px){
+    padding: 15px !important;
+  }
+  @media screen and (min-width: 1600px){
+    padding: 20px !important;
+  }
 }
 
 .b24-form-sign {
