--- a/src/scss/sections/_cards.scss
+++ b/src/scss/sections/_cards.scss
@@ -105,17 +105,61 @@
   grid-template-columns: repeat(2, 1fr);
   grid-auto-rows: 1fr;
   grid-gap: 5px;
+  @media screen and (min-width: 400px) {
+    grid-template-columns: unset;
+    grid-auto-rows: unset;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+  }
+  @media screen and (min-width: 600px){
+    grid-gap: 10px;
+  }
+  @media screen and (min-width: 768px){
+    grid-gap: 15px;
+  }
+  @media screen and (min-width: 1024px){
+    grid-gap: 20px;
+  }
+  @media screen and (min-width: 1280px){
+    grid-gap: 25px;
+  }
+  @media screen and (min-width: 1600px){
+    grid-gap: 30px;
+  }
 }
 
 .cardsItem {
   padding: 5px 10px;
-
   display: flex;
   flex-direction: column;
   justify-content: space-around;
   align-items: center;
   border: 3px solid rgba(34, 66, 115, 0.77);
   border-radius: 20px;
+  @media screen and (min-width: 400px){
+    width: 180px;
+    height: 120px;
+  }
+  @media screen and (min-width: 600px){
+    height: 140px;
+  }
+  @media screen and (min-width: 768px){
+    width: 200px;
+    height: 180px;
+  }
+  @media screen and (min-width: 1024px){
+    width: 300px;
+    height: 200px;
+  }
+  @media screen and (min-width: 1280px){
+    width: 350px;
+    height: 250px;
+  }
+  @media screen and (min-width: 1600px){
+    width: 400px;
+    height: 300px;
+  }
 }
 
 .cardsDescription {
@@ -130,127 +174,127 @@
 .cardsImage1 {
   width: 24px;
   @media screen and (min-width: 768px) {
-    width: 44px;    
+    width: 44px;
   }
   @media screen and (min-width: 1024px) {
-    width: 64px;   
+    width: 64px;
   }
   @media screen and (min-width: 1280px) {
-    width: 83px;    
+    width: 83px;
   }
   @media screen and (min-width: 1600px) {
-    width: 102px;   
+    width: 102px;
   }
 }
 
 .cardsImage2 {
   width: 24px;
   @media screen and (min-width: 768px) {
-    width: 42px;    
+    width: 42px;
   }
   @media screen and (min-width: 1024px) {
-    width: 60px;   
+    width: 60px;
   }
   @media screen and (min-width: 1280px) {
-    width: 78px;    
+    width: 78px;
   }
   @media screen and (min-width: 1600px) {
-    width: 96px;   
+    width: 96px;
   }
 }
 
 .cardsImage3 {
   width: 28px;
   @media screen and (min-width: 768px) {
-    width: 56px;    
+    width: 56px;
   }
   @media screen and (min-width: 1024px) {
-    width: 84px;   
+    width: 84px;
   }
   @media screen and (min-width: 1280px) {
-    width: 112px;    
+    width: 112px;
   }
   @media screen and (min-width: 1600px) {
-    width: 139px;   
+    width: 139px;
   }
 }
 
 .cardsImage4 {
   width: 32px;
   @media screen and (min-width: 768px) {
-    width: 68px;    
+    width: 68px;
   }
   @media screen and (min-width: 1024px) {
-    width: 104px;   
+    width: 104px;
   }
   @media screen and (min-width: 1280px) {
-    width: 139px;    
+    width: 139px;
   }
   @media screen and (min-width: 1600px) {
-    width: 174px;   
+    width: 174px;
   }
 }
 
 .cardsImage5 {
   width: 36px;
   @media screen and (min-width: 768px) {
-    width: 64px;    
+    width: 64px;
   }
   @media screen and (min-width: 1024px) {
-    width: 92px;   
+    width: 92px;
   }
   @media screen and (min-width: 1280px) {
-    width: 120px;    
+    width: 120px;
   }
   @media screen and (min-width: 1600px) {
-    width: 149px;   
+    width: 149px;
   }
 }
 
 .cardsImage6 {
   width: 30px;
   @media screen and (min-width: 768px) {
-    width: 46px;    
+    width: 46px;
   }
   @media screen and (min-width: 1024px) {
-    width: 62px;   
+    width: 62px;
   }
   @media screen and (min-width: 1280px) {
-    width: 78px;    
+    width: 78px;
   }
   @media screen and (min-width: 1600px) {
-    width: 111px;   
+    width: 111px;
   }
 }
 
 .cardsImage7 {
-  width: 37px;  
+  width: 37px;
   @media screen and (min-width: 768px) {
-    width: 69px;    
+    width: 69px;
   }
   @media screen and (min-width: 1024px) {
-    width: 101px;   
+    width: 101px;
   }
   @media screen and (min-width: 1280px) {
-    width: 132px;    
+    width: 132px;
   }
   @media screen and (min-width: 1600px) {
-    width: 166px;   
+    width: 166px;
   }
 }
 
 .cardsImage8 {
-  width: 31px;  
+  width: 31px;
   @media screen and (min-width: 768px) {
-    width: 61px;    
+    width: 61px;
   }
   @media screen and (min-width: 1024px) {
-    width: 91px;    
+    width: 91px;
   }
   @media screen and (min-width: 1280px) {
-    width: 121px;   
+    width: 121px;
   }
   @media screen and (min-width: 1600px) {
-    width: 150px;    
+    width: 150px;
   }
 }
