--- a/src/scss/sections/_foreign.scss
+++ b/src/scss/sections/_foreign.scss
@@ -1,5 +1,17 @@
 .foreignSection {
   padding: 10px 0;
+  @media screen and (min-width: 768px){
+    padding: 15px 0;
+  }
+  @media screen and (min-width: 1024px){
+    padding: 20px 0;
+  }
+  @media screen and (min-width: 1280px){
+    padding: 25px 0;
+  }
+  @media screen and (min-width: 1600px){
+    padding: 30px 0;
+  }
 }
 
 .foreignTitle {
@@ -18,6 +30,18 @@
   justify-content: space-between;
   align-items: center;
   background-color: $brandTextColor;
+  @media screen and (min-width: 768px){
+    padding: 15px;
+  }
+  @media screen and (min-width: 1024px){
+    padding: 20px;
+  }
+  @media screen and (min-width: 1280px){
+    padding: 25px;
+  }
+  @media screen and (min-width: 1600px){
+    padding: 30px;
+  }
 }
 
 .foreignContentTextWrap {
@@ -48,4 +72,7 @@
   margin-right: -10px;
   width: 44%;
   filter: drop-shadow(12px 9px 12px rgba(0, 0, 0, 0.25));
+  @media screen and (min-width: 768px){
+    margin-right: 0
+  }  
 }
