--- a/src/scss/sections/_ourTeam.scss
+++ b/src/scss/sections/_ourTeam.scss
@@ -22,18 +22,64 @@
 
 .sliderWrap {
   margin: 0 auto;
-
   padding: 0 40px;
   max-width: 400px;
-  // @media screen and (min-width: 768px) {
-  //   display: none;
-  // }
+  @media screen and (min-width: 768px) {
+    margin-right: 30px;
+    padding: 0;
+    max-width: 700px;
+  }
+  @media screen and (min-width: 1024px) {
+    max-width: 944px;
+  }
+  @media screen and (min-width: 1280px) {
+    max-width: 1120px;
+  }
+  @media screen and (min-width: 1600px) {
+    max-width: 1400px;
+  }
 }
 
 .sliderTeamItem {
   width: 210px;
   padding: 8px;
   background-color: $brandTextColor;
+  @media screen and (min-width: 768px) {
+    width: 175px;
+    height: 280px;
+  }
+  @media screen and (min-width: 840px) {
+    height: 300px;
+  }
+  @media screen and (min-width: 1024px) {
+    padding: 10px;
+    width: 224px;
+    height: 360px;
+  }
+  @media screen and (min-width: 1280px) {
+    padding: 12px;
+    width: 275px;
+    height: 420px;
+  }
+  @media screen and (min-width: 1600px) {
+    padding: 18px;
+    width: 300px;
+    height: 500px;
+  }
+}
+.sliderTeamItem:not(:last-child) {
+  @media screen and (min-width: 768px) {
+    margin-right: 8px;
+  }
+  @media screen and (min-width: 1024px) {
+    margin-right: 16px;
+  }
+  @media screen and (min-width: 1280px) {
+    margin-right: 24px;
+  }
+  @media screen and (min-width: 1600px) {
+    margin-right: 32px;
+  }
 }
 
 .sliderTeamItemImage {
@@ -44,8 +90,8 @@
   margin-bottom: 10px;
   font-family: "Abrac";
   font-weight: 400;
-  font-size: calcFluidFontSize(10, 20, 320, 1600);
-  line-height: calcFluidLineHeight(12, 24, 320, 1600);
+  font-size: calcFluidFontSize(8, 18, 320, 1600);
+  line-height: calcFluidLineHeight(10, 12, 320, 1600);
   text-align: center;
   color: $additionalTextColor;
 }
@@ -53,8 +99,8 @@
 .sliderTeamItemText {
   font-family: "HalveticaNeue";
   font-weight: 300;
-  font-size: calcFluidFontSize(10, 20, 320, 1600);
-  line-height: calcFluidLineHeight(12, 24, 320, 1600);
+  font-size: calcFluidFontSize(8, 18, 320, 1600);
+  line-height: calcFluidLineHeight(10, 20, 320, 1600);
   text-align: center;
   color: $additionalTextColor;
 }
